syntax = "proto3";

option go_package = "cstati-events-infrastructure-repositories-contracts";

package Cstati.Events.Infrastructure.Repositories.Contracts;

option csharp_namespace = "Cstati.Events.Infrastructure.Repositories.Contracts";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

message CstatiEventInfoDb {
  string name = 1;
  optional google.protobuf.StringValue excel_sheet_link = 2;
  optional google.protobuf.Timestamp date = 3;
  optional google.protobuf.StringValue location = 4;
  optional google.protobuf.Int32Value expected_guests_count = 5;
}
